deployment/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.4.1
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-datasource
              mountPath: /etc/grafana/provisioning/datasources
            - name: dashboard-provider
              mountPath: /etc/grafana/provisioning/dashboards
            - name: aspnet-dashboard
              mountPath: /var/lib/grafana/dashboards/aspnet
            - name: aspnet-endpoint-dashboard
              mountPath: /var/lib/grafana/dashboards/aspnet-endpoint
      volumes:
        - name: grafana-datasource
          configMap:
            name: grafana-datasource
        - name: dashboard-provider
          configMap:
            name: grafana-dashboard-provider
        - name: aspnet-dashboard
          configMap:
            name: grafana-aspnet-dashboard
        - name: aspnet-endpoint-dashboard
          configMap:
            name: grafana-aspnet-endpoint-dashboard
