deployment/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeshop-orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeshop-orders
  template:
    metadata:
      labels:
        app: kubeshop-orders
    spec:
      containers:
        - name: kubeshop-orders
          image: docker.io/marcioduarte89/kubeshop-orders:latest
          livenessProbe:
            httpGet:
              path: /health/live
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          ports:
           - containerPort: 80
