deployment/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeshop-products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeshop-products
  template:
    metadata:
      labels:
        app: kubeshop-products
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "80"
    spec:
      containers:
        - name: kubeshop-products
          image: docker.io/marcioduarte89/kubeshop-products:latest
          livenessProbe:
            httpGet:
              path: /health/live
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          ports:
           - containerPort: 80
