deployment/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector:
    app: kubeshop-products
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: kubeshop-orders
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
