deployment/products-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/products/$2
spec:
  rules:
    - host: shop.local
      http:
        paths:
          - path: /products(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: products-service
                port:
                  number: 80
